<<?xml version="1.0"?>
<package format="3">
  <name>bal_ca0_proba</name>
  <version>0.0.2</version>
  <description>Szinusz és koszinusz jel generáló ROS2 node</description>
  <maintainer email="te@pelda.hu">Te</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
