<?xml version="1.0"?>
<package format="3">
  <name>bal_ca0_proba</name>
  <version>0.0.1</version>
  <description>Publikál szinusz és koszinusz jelet</description>
  <maintainer email="abel@example.com">abel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
